# Execor

./: .gitignore  Dockerfile.control  Dockerfile.core  Dockerfile.dashboard  README.md  build_system.bat  docker-compose.yml  setup_git.bat
control-plane/: go.mod
control-plane/cmd/server/: main.go
control-plane/internal/server/: metrics.go  registry.go  server.go  types.go
control-plane/proto/: hydra.pb.go  hydra_grpc.pb.go
core/: CMakeLists.txt
core/include/: hydra.h
core/src/: executor.c  ipc.c  main.c  scheduler.c
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
proto/: hydra.proto
sdk/: example_workload.py
sdk/hydra/: client.py
